--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>vueapp</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0,user-scalable=0">
+    <link rel="stylesheet" href="static/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
