--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vueapp</title>
+    <title>点外卖</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="static/css/reset.css">
   </head>
